[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Splash.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/TelaInicial.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/Btn_Credits1-Sheett.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/Btn_Credits2-Sheett.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/Btn_Play1-Sheet.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/Btn_Play2-Sheet.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/TelaInstrução.png" type="Texture" id=7]

[node name="Splash" type="Node2D"]
script = ExtResource( 1 )

[node name="TelaInicial" type="Sprite" parent="."]
position = Vector2( -2, 2 )
texture = ExtResource( 2 )
centered = false

[node name="btn_credits" type="TextureButton" parent="."]
margin_left = 214.0
margin_top = 781.0
margin_right = 387.0
margin_bottom = 850.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="btn_play" type="TextureButton" parent="."]
margin_left = 236.0
margin_top = 627.0
margin_right = 344.0
margin_bottom = 691.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
stretch_mode = 2

[node name="btn_tutorial" type="Button" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 22.0
margin_top = 919.0
margin_right = 34.0
margin_bottom = 939.0
text = "HOW TO PLAY"
flat = true

[node name="Tutorial" type="Node2D" parent="."]
position = Vector2( -720, 0 )

[node name="tex_btn_tutorial" type="TextureButton" parent="Tutorial"]
margin_right = 720.0
margin_bottom = 960.0
rect_pivot_offset = Vector2( 360, 480 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 4

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="btn_credits" to="." method="_on_btn_credits_pressed"]
[connection signal="pressed" from="btn_play" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="btn_tutorial" to="." method="_on_Button_Tutorial_pressed"]
[connection signal="pressed" from="Tutorial/tex_btn_tutorial" to="." method="_on_tex_btn_tutorial_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
